Updates to notebook to include To Do comments

--- a/ProjectCode/PredictingStockPrices.ipynb
+++ b/ProjectCode/PredictingStockPrices.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from keras.layers.core import Dense, Activation, Dropout\n",
     "from keras.layers.recurrent import LSTM\n",
@@ -24,22 +14,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[['1526.75']\n",
+      "  ['1547.040039']\n",
+      "  ['1546.630005']\n",
+      "  ...\n",
+      "  ['1520.27002']\n",
+      "  ['1475.619995']\n",
+      "  ['1474.77002']]\n",
+      "\n",
+      " [['1831.369995']\n",
+      "  ['1826.77002']\n",
+      "  ['1837.880005']\n",
+      "  ...\n",
+      "  ['1819.26001']\n",
+      "  ['1829.829956']\n",
+      "  ['1838.630005']]\n",
+      "\n",
+      " [['1190.48999']\n",
+      "  ['1202.930054']\n",
+      "  ['1205.819946']\n",
+      "  ...\n",
+      "  ['1133.579956']\n",
+      "  ['1132.939941']\n",
+      "  ['1131.73999']]\n",
+      "\n",
+      " ...\n",
+      "\n",
+      " [['1530.619995']\n",
+      "  ['1536.339966']\n",
+      "  ['1539.180054']\n",
+      "  ...\n",
+      "  ['1510.119995']\n",
+      "  ['1518.76001']\n",
+      "  ['1547.699951']]\n",
+      "\n",
+      " [['1267.380005']\n",
+      "  ['1260.310059']\n",
+      "  ['1249.01001']\n",
+      "  ...\n",
+      "  ['1224.51001']\n",
+      "  ['1232.040039']\n",
+      "  ['1249.050049']]\n",
+      "\n",
+      " [['1211.670044']\n",
+      "  ['1192.130005']\n",
+      "  ['1197.52002']\n",
+      "  ...\n",
+      "  ['1073.650024']\n",
+      "  ['1074.030029']\n",
+      "  ['1067.949951']]]\n",
+      "3727\n"
+     ]
+    }
+   ],
    "source": [
     "#Step 1 Load Data\n",
-    "X_train, y_train, X_test, y_test = lstm.load_data('sp500.csv', 50, True)"
+    "\n",
+    "# (1) TO DO: Make the loading of data dynamic based on user input\n",
+    "\n",
+    "# (2) TO DO: Update the X_train, X_test to use additional inputs (need to figure these out)\n",
+    "\n",
+    "X_train, y_train, X_test, y_test = lstm.load_data('sp500.csv', 30, False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -51,6 +99,15 @@
    ],
    "source": [
     "#Step 2 Build Model\n",
+    "\n",
+    "# (3) TO DO: Use RandomSearch to find the best parameters:\n",
+    "\n",
+    "# Dropout ratio\n",
+    "# Number of neurons\n",
+    "# Activation function\n",
+    "# Momentum\n",
+    "# Anything else?\n",
+    "\n",
     "model = Sequential()\n",
     "\n",
     "model.add(LSTM(\n",
@@ -70,15 +127,13 @@
     "\n",
     "start = time.time()\n",
     "model.compile(loss='mse', optimizer='rmsprop')\n",
-    "print 'compilation time : ', time.time() - start"
+    "print('compilation time : ', time.time() - start)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -113,9 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -138,7 +191,9 @@
    "source": [
     "#Step 4 - Plot the predictions!\n",
     "predictions = lstm.predict_sequences_multiple(model, X_test, 50, 50)\n",
-    "lstm.plot_results_multiple(predictions, y_test, 50)"
+    "lstm.plot_results_multiple(predictions, y_test, 50)\n",
+    "\n",
+    "# (4) TO DO: Implement the trading aspect of the model, and output parameters such as CAGR, Sharpe ratio etc."
    ]
   },
   {
@@ -153,21 +208,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.6"
   }
  },
  "nbformat": 4,
