--- a/ProjectCode/PredictingStockPrices.ipynb
+++ b/ProjectCode/PredictingStockPrices.ipynb
@@ -2,75 +2,80 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.layers.core import Dense, Activation, Dropout\n",
     "from keras.layers.recurrent import LSTM\n",
     "from keras.models import Sequential\n",
-    "import lstm, time #helper libraries"
+    "import lstm, time #helper libraries\n",
+    "import Yahooimport as Y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[['1526.75']\n",
-      "  ['1547.040039']\n",
-      "  ['1546.630005']\n",
-      "  ...\n",
-      "  ['1520.27002']\n",
-      "  ['1475.619995']\n",
-      "  ['1474.77002']]\n",
+      "[*********************100%***********************]  1 of 1 downloaded\n",
+      "                  Open        High         Low       Close   Adj Close  \\\n",
+      "Date                                                                     \n",
+      "2018-09-04  173.500000  173.889999  168.800003  171.160004  171.160004   \n",
+      "2018-09-05  169.490005  171.130005  166.669998  167.179993  167.179993   \n",
+      "2018-09-06  166.979996  166.979996  160.000000  162.529999  162.529999   \n",
+      "2018-09-07  160.309998  164.630005  160.160004  163.039993  163.039993   \n",
+      "2018-09-10  163.509995  165.009995  162.160004  164.179993  164.179993   \n",
+      "2018-09-11  163.940002  167.190002  163.720001  165.940002  165.940002   \n",
+      "2018-09-12  163.250000  164.490005  161.800003  162.000000  162.000000   \n",
+      "2018-09-13  162.000000  163.320007  160.860001  161.360001  161.360001   \n",
+      "2018-09-14  161.720001  162.839996  160.339996  162.320007  162.320007   \n",
+      "2018-09-17  161.919998  162.059998  159.770004  160.580002  160.580002   \n",
+      "2018-09-18  159.389999  161.759995  158.869995  160.300003  160.300003   \n",
+      "2018-09-19  160.080002  163.440002  159.479996  163.059998  163.059998   \n",
+      "2018-09-20  164.500000  166.449997  164.470001  166.020004  166.020004   \n",
+      "2018-09-21  166.639999  167.250000  162.809998  162.929993  162.929993   \n",
+      "2018-09-24  161.029999  165.699997  160.880005  165.410004  165.410004   \n",
+      "2018-09-25  161.990005  165.589996  161.149994  164.910004  164.910004   \n",
+      "2018-09-26  164.300003  169.300003  164.210007  166.949997  166.949997   \n",
+      "2018-09-27  167.550003  171.770004  167.210007  168.839996  168.839996   \n",
+      "2018-09-28  168.330002  168.789993  162.559998  164.460007  164.460007   \n",
+      "2018-10-01  163.029999  165.880005  161.259995  162.440002  162.440002   \n",
       "\n",
-      " [['1831.369995']\n",
-      "  ['1826.77002']\n",
-      "  ['1837.880005']\n",
-      "  ...\n",
-      "  ['1819.26001']\n",
-      "  ['1829.829956']\n",
-      "  ['1838.630005']]\n",
-      "\n",
-      " [['1190.48999']\n",
-      "  ['1202.930054']\n",
-      "  ['1205.819946']\n",
-      "  ...\n",
-      "  ['1133.579956']\n",
-      "  ['1132.939941']\n",
-      "  ['1131.73999']]\n",
-      "\n",
-      " ...\n",
-      "\n",
-      " [['1530.619995']\n",
-      "  ['1536.339966']\n",
-      "  ['1539.180054']\n",
-      "  ...\n",
-      "  ['1510.119995']\n",
-      "  ['1518.76001']\n",
-      "  ['1547.699951']]\n",
-      "\n",
-      " [['1267.380005']\n",
-      "  ['1260.310059']\n",
-      "  ['1249.01001']\n",
-      "  ...\n",
-      "  ['1224.51001']\n",
-      "  ['1232.040039']\n",
-      "  ['1249.050049']]\n",
-      "\n",
-      " [['1211.670044']\n",
-      "  ['1192.130005']\n",
-      "  ['1197.52002']\n",
-      "  ...\n",
-      "  ['1073.650024']\n",
-      "  ['1074.030029']\n",
-      "  ['1067.949951']]]\n",
-      "3727\n"
+      "              Volume  \n",
+      "Date                  \n",
+      "2018-09-04  29809000  \n",
+      "2018-09-05  31226700  \n",
+      "2018-09-06  41514800  \n",
+      "2018-09-07  24300600  \n",
+      "2018-09-10  20197700  \n",
+      "2018-09-11  20457100  \n",
+      "2018-09-12  24078100  \n",
+      "2018-09-13  25453800  \n",
+      "2018-09-14  21770400  \n",
+      "2018-09-17  21005300  \n",
+      "2018-09-18  22465200  \n",
+      "2018-09-19  19629000  \n",
+      "2018-09-20  18824200  \n",
+      "2018-09-21  45994800  \n",
+      "2018-09-24  19222800  \n",
+      "2018-09-25  27622800  \n",
+      "2018-09-26  25252200  \n",
+      "2018-09-27  27266900  \n",
+      "2018-09-28  34265600  \n",
+      "2018-10-01  26407700  \n"
      ]
     }
    ],
@@ -81,6 +86,8 @@
     "\n",
     "# (2) TO DO: Update the X_train, X_test to use additional inputs (need to figure these out)\n",
     "\n",
+    "#data = Y.retrieve_data('FB','2018-09-01','2018-10-01')\n",
+    "#print(data)\n",
     "X_train, y_train, X_test, y_test = lstm.load_data('sp500.csv', 30, False)"
    ]
   },
@@ -222,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.5.6"
   }
  },
  "nbformat": 4,
