dylan code added

--- a/Stock-Market-Analysis/Final_code.ipynb
+++ b/Stock-Market-Analysis/Final_code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,42 +93,40 @@
     }
    ],
    "source": [
-    "# # For multiple inputs\n",
+    "# # # For multiple inputs\n",
     "\n",
-    "# dataset.head()\n",
-    "training_set = dataset[['Close','Open','MACD','RSI EWMA']]\n",
-    "training_set = pd.DataFrame(training_set)\n",
+    "# # dataset.head()\n",
+    "# training_set = dataset[['Close','Open','MACD','RSI EWMA']]\n",
+    "# training_set = pd.DataFrame(training_set)\n",
     "\n",
-    "start=2400 #1200\n",
-    "end=1400 #200\n",
+    "# start=2400 #1200\n",
+    "# end=1400 #200\n",
     "\n",
-    "training_set=training_set[-1*start:-1*end]\n",
-    "realvalue=training_set\n",
+    "# training_set=training_set[-1*start:-1*end]\n",
+    "# realvalue=training_set\n",
     "\n",
-    "# Feature Scaling\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "sc = MinMaxScaler(feature_range = (0, 1))\n",
-    "training_set_scaled = training_set\n",
-    "training_set_scaled[['Close','Open','RSI EWMA']] = sc.fit_transform(training_set[['Close','Open','RSI EWMA']])\n",
-    "print(training_set_scaled.head())\n"
+    "# # Feature Scaling\n",
+    "# from sklearn.preprocessing import MinMaxScaler\n",
+    "# sc = MinMaxScaler(feature_range = (0, 1))\n",
+    "# training_set_scaled = training_set\n",
+    "# training_set_scaled[['Close','Open','RSI EWMA']] = sc.fit_transform(training_set[['Close','Open','RSI EWMA']])\n",
+    "# print(training_set_scaled.head())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "               Close      Open      MACD  RSI EWMA\n",
-      "Date                                              \n",
-      "2009-09-04  0.000000  0.000000  0.389422  0.149656\n",
-      "2009-09-08  0.004927  0.010652  0.424612  0.149603\n",
-      "2009-09-09  0.001561  0.010278  0.426944  0.149711\n",
-      "2009-09-10  0.004231  0.008932  0.440088  0.149646\n",
-      "2009-09-11  0.003479  0.010521  0.440812  0.149678\n"
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'head'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-42-1d317af3b7a7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mwindow\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m30\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mlength\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtraining_set_scaled\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtraining_set_scaled\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[0mcolumn_idx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtraining_set_scaled\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Close'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'head'"
      ]
     }
    ],
@@ -344,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
