--- a/FinalCode/trading_strategies.ipynb
+++ b/FinalCode/trading_strategies.ipynb
@@ -270,15 +270,20 @@
     "    #\"\"\"\n",
     "    for i in range(len(real_prices['value_prediction'])-1) :\n",
     "        if(count==0):\n",
+    "            #Strategy 2\n",
     "            #if ((real_prices.at[i,'value_prediction'])<0):\n",
+    "            #Strategy test2\n",
     "            #if ((real_prices.at[i,'value_prediction'])<(-0.00001*real_prices.at[i,'Close'])):\n",
+    "            #Strategy test3\n",
     "            #if ((real_prices.at[i,'value_prediction'])<(real_prices.at[i,'returns'])):\n",
     "            #if ((real_prices.at[i,'value_prediction'])<(abs(real_prices.at[i,'returns']))):\n",
+    "            #Strategy 3\n",
     "            #if ((real_prices.at[i,'value_prediction'])<0):    \n",
     "            #    real_prices.at[i+1,'prediction_signal']=real_prices.at[i,'prediction_signal']*(-1)\n",
     "            #    real_prices.at[i+1,'value_prediction']=real_prices.at[i+1,'prediction_signal']*real_prices.at[i+1,'returns']\n",
     "            #    count=2\n",
     "            #    counter=counter+1\n",
+    "            #Strategy test4\n",
     "            if ((real_prices.at[i,'returns'])>0 and real_prices.at[i,'value_prediction']<0):    \n",
     "                real_prices.at[i+1,'prediction_signal']=real_prices.at[i,'prediction_signal']*(-1)\n",
     "                real_prices.at[i+1,'value_prediction']=real_prices.at[i+1,'prediction_signal']*real_prices.at[i+1,'returns']\n",
@@ -573,13 +578,7 @@
       "827/827 [==============================] - 4s 5ms/step - loss: 0.0022\n",
       "Epoch 98/100\n",
       "827/827 [==============================] - 4s 5ms/step - loss: 0.0018\n",
-      "Epoch 99/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 99/100\n",
       "827/827 [==============================] - 4s 5ms/step - loss: 0.0018\n",
       "Epoch 100/100\n",
       "827/827 [==============================] - 4s 5ms/step - loss: 0.0019\n"
